# genicam-rs

./: .gitignore  Cargo.toml  README.md  roadmap.md
.github/workflows/: ci.yml  publish-docs.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  api.md  architecture.md  faq.md  index.md  networking.md  primer.md  quick-start.md  welcome.md
book/src/crates/: README.md  genapi-core.md  genicp.md  tl-gige.md
book/src/tutorials/: README.md  discovery.md  genapi-xml.md  registers.md  streaming.md
crates/genapi-core/: Cargo.toml  README.md
crates/genapi-core/src/: bitops.rs  lib.rs  swissknife.rs
crates/genapi-xml/: Cargo.toml  README.md
crates/genapi-xml/src/: lib.rs
crates/gencamctl/: Cargo.toml
crates/gencamctl/src/: cmd_bench.rs  cmd_chunks.rs  cmd_list.rs  cmd_stream.rs  common.rs  main.rs
crates/genicam/: Cargo.toml
crates/genicam/examples/: action_trigger.rs  bitfields_demo.rs  enum_pvalue_demo.rs  events_gige.rs  features_demo.rs  get_set_feature.rs  grab_gige.rs  grab_with_chunks.rs  list_cameras.rs  multicast_grab.rs  paddress_demo.rs  selectors_demo.rs  soak_bench.rs  stats.rs  swissknife_demo.rs  time_sync.rs
crates/genicam/src/: chunks.rs  events.rs  frame.rs  lib.rs  stream.rs  time.rs
crates/genicp/: Cargo.toml  README.md
crates/genicp/src/: lib.rs
crates/pfnc/: Cargo.toml
crates/pfnc/src/: lib.rs
crates/sfnc/: Cargo.toml
crates/sfnc/src/: lib.rs
crates/tl-gige/: Cargo.toml  README.md
crates/tl-gige/src/: action.rs  gvcp.rs  gvsp.rs  lib.rs  message.rs  nic.rs  stats.rs  time.rs
crates/tl-u3v/: Cargo.toml
doc/: genicam.md
examples/: action_trigger.rs  bitfields_demo.rs  enum_pvalue_demo.rs  events_gige.rs  features_demo.rs  get_set_feature.rs  get_set_features.rs  grab_gige.rs  grab_with_chunks.rs  list_cameras.rs  paddress_demo.rs  selectors_demo.rs  stats.rs  time_sync.rs
src/: main.rs
