[workspace]
members = [
  "crates/genicp",
  "crates/genapi-xml",
  "crates/genapi-core",
  "crates/tl-gige",
  "crates/tl-u3v",
  "crates/pfnc",
  "crates/sfnc",
  "crates/genicam",
  # "crates/gentl-cti",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/genicam-rs"
rust-version = "1.75"

[workspace.dependencies]
thiserror = "1"
bytes = "1"
bitflags = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
quick-xml = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# For USB later:
rusb = "0.9"
# For net utils:
if-addrs = "0.11"
