[package]
name = "genicam-rs"
version = "0.1.0"
description = "GenICam workspace: GigE Vision + GenApi tooling (aggregator)"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# This is an aggregator/CLI; not intended for crates.io publishing yet.
publish = false

[workspace]
members = [
  "crates/genicp",
  "crates/genapi-xml",
  "crates/genapi-core",
  "crates/tl-gige",
  "crates/tl-u3v",
  "crates/pfnc",
  "crates/sfnc",
  "crates/genicam",
  # "crates/gentl-cti",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/VitalyVorobyev/genicam-rs"
rust-version = "1.75"

[workspace.dependencies]
thiserror = "1"
bytes = "1"
bitflags = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
quick-xml = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# For USB later:
rusb = "0.9"
# For net utils:
if-addrs = "0.11"
async-trait = "0.1"
socket2 = "0.5"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "net", "time", "sync"] }
tl-gige = { version = "0.1.0", path = "crates/tl-gige" }
genapi-xml = { version = "0.1.0", path = "crates/genapi-xml" }
genicam = { version = "0.1.0", path = "crates/genicam" }
genapi-core = { version = "0.1.0", path = "crates/genapi-core" }
sfnc = { version = "0.1.0", path = "crates/sfnc" }
