[package]
name = "genapi-xml"
version = "0.1.0"
description = "GenICam XML retrieval and minimal parsing (schema, features)"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
quick-xml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
