[package]
name = "genapi-xml"
version = "0.1.0"
edition = "2021"
description = "GenICam XML retrieval and minimal parsing (schema, features)"
license = "MIT"
repository = "https://github.com/VitalyVorobyev/genicam-rs"
readme = "README.md"
keywords = ["genicam", "genapi", "xml", "vision"]
categories = ["hardware-support", "network-programming", "science::robotics"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
quick-xml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
