[package]
name = "genicam"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
genapi-core = { version = "0.1.0", path = "../genapi-core" }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing = { workspace = true }
tl-gige = { version = "0.1.0", path = "../tl-gige" }
async-trait = { workspace = true }
