[package]
name = "genicp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
