[package]
name = "tl-gige"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
if-addrs = { workspace = true }
bytes = { workspace = true }
genicp = { path = "../genicp" }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "net", "time"] }
