[package]
name = "tl-gige"
version = "0.1.0"
description = "GigE Vision transport: GVCP discovery, GenCP over GVCP, and GVSP"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
if-addrs = { workspace = true }
bytes = { workspace = true }
genicp = { version = "0.1.0", path = "../genicp" }
tokio = { workspace = true, features = ["macros", "net", "time"] }
fastrand = "2"
async-trait = { workspace = true }
socket2 = { workspace = true, features = ["all"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "net", "time"] }
